[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/projet jeu  copy/el_chassor.png" type="Texture" id=1]
[ext_resource path="res://src/pers/oppsergent.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/Randomize7.wav" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.1579, 16.7895 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.6316, 5.26316 )

[node name="OppSergent" type="KinematicBody2D"]
scale = Vector2( 1.9, 1.9 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )
speed = Vector2( 230, 600 )

[node name="opps" type="AnimatedSprite" parent="."]
position = Vector2( 33.1579, -31.1172 )
scale = Vector2( 1.26917, 1.39191 )
frames = SubResource( 3 )
playing = true
offset = Vector2( 2.07047, 11.4964 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 40, -7.89474 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
modulate = Color( 1, 0.631373, 0, 1 )
position = Vector2( 34, 0 )
scale = Vector2( 0.4, 0.8 )
rect = Rect2( -40, -10, 20, 20 )
process_parent = true
physics_process_parent = true

[node name="KillZone" type="Area2D" parent="."]
position = Vector2( 40, 8 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
modulate = Color( 0.27451, 0.0431373, 1, 1 )
position = Vector2( 0, -32.2105 )
shape = SubResource( 2 )

[node name="audioPlayer" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="audioPlayer"]
stream = ExtResource( 3 )
volume_db = -3.517
[connection signal="tree_entered" from="CollisionShape2D" to="." method="_on_CollisionShape2D_tree_entered"]
[connection signal="area_entered" from="KillZone" to="." method="_on_KillZone_area_entered"]
[connection signal="body_entered" from="KillZone" to="." method="_on_KillZone_body_entered"]
